public class PlayerAnimations
{
    public const string IsRunningBool = "IsRunning";
    public const string IsPushingBool = "IsPushing";
    public const string HurtTrigger = "Hurt";
    public const string ShoutTrigger = "Shout";
    public const string JumpTrigger = "Jump";
    public const string JumpLandingTrigger = "JumpLanding";
    public const string UseSmashTrigger = "UseSmash";
}